some DataPortal edits

--- a/docs/DataPortals/02.Create-DataPortals.md
+++ b/docs/DataPortals/02.Create-DataPortals.md
@@ -49,10 +49,10 @@ Each sheet in the Excel workbook represents a container which is a similar objec
 - [Type (required):](06.Setting-Details/Type.md) The name of the data type of the given field, such as integer or string, that the data will be stored as in the database.
 - [ControlType (required):](06.Setting-Details/ControlType.md) The type of form control field that will be shown to the user to input their data for this field. Examples are Text or Date.
 - [Required:](06.Setting-Details/Required.md) Indicates whether the field is required.
-- For each ControlType, other columns can be added which specify settings. These are in Setting Details, which provide additional features or restrictions on the field.
+- For each ControlType, other columns can be added which specify settings. These are in "5.6 Container Fields", which provide additional features or restrictions on a field.
 
 !!! note
-    Note the special case for ‘Label’ fields — DisplayName contains rich text written in [Markdown.](https://daringfireball.net/projects/markdown/)
+    Note the special case for ‘Label’ fields — [DisplayName](./06.Setting-Details/DisplayName.md) contains rich text written in [Markdown.](https://daringfireball.net/projects/markdown/)
 
 ## DataPortal Syntax
 
