--- a/docs/DataPortals/05.Categories.md
+++ b/docs/DataPortals/05.Categories.md
@@ -11,9 +11,9 @@ some_url: https://docs.composable.ai
 
 Category sheets define the list of values a user can choose in a single/multi select field. After being defined in a container sheet, a separate "Category" sheet lists the category values. There are a few options for control types to display a category selection:
 
-- [Category](../05.Control-Details/Category.md)
-- [Pill](../05.Control-Details/Pill.md)
-- [Radio](../05.Control-Details/Radio.md) (single value selection only)
+- [Category](./05.Control-Details/Category.md)
+- [Pill](./05.Control-Details/Pill.md)
+- [Radio](./05.Control-Details/Radio.md) (single value selection only)
 
 ### Visibility Controls
 
