--- a/docs/DataPortals/06.SettingSheet.md
+++ b/docs/DataPortals/06.SettingSheet.md
@@ -14,7 +14,7 @@ The settings sheet allows for some customization of DataPortal actions. A settin
 
 ## Master Sheet
 
-These settings are defined in the sheet `Master.settings`. These will apply for the entire DataPortal. 
+These settings are defined in the sheet named `Master.settings`. These will apply for the entire DataPortal. 
 
 | Option                                                 | Description                                                  | Default Behavior                        | Allowed Values                |
 | ------------------------------------------------------ | ------------------------------------------------------------ | --------------------------------------- | ----------------------------- |
@@ -34,7 +34,7 @@ These settings are defined in the sheet `Master.settings`. These will apply for 
 
 ## Container Sheets
 
-These settings are set in `<ContainerName>.settings`. They override master settings for a page.
+Settings for a single container are set in sheets named `<ContainerName>.settings`. They override master settings if set.
 
 | Option                            | Description                                    | Default Behavior | Allowed Values               |
 | --------------------------------- | ---------------------------------------------- | ---------------- | ---------------------------- |
