--- a/docs/DataPortals/05.Categories.md
+++ b/docs/DataPortals/05.Categories.md
@@ -39,6 +39,6 @@ As an example for using the AvailableWith column, in the above image, value `Z` 
 
 ## Multiple Category Sheet
 
-Instead of a separate sheet for each categort, multiple categories can be descibed in a sheet named `Categories`. In this sheet, each column represents its own category to simplify the Excel structure if you have a lot of categories in your data model. The `Id` defined in a single category sheet is assigned automatically. The header is the category name, and the body rows are the category selections. When referencing this category from another sheet, define the Type as `Form.<CategoryName>`.
+Instead of a separate sheet for each category, multiple categories can be descibed in a sheet named `Categories`. In this sheet, each column represents its own category to simplify the Excel structure if you have a lot of categories in your data model. The `Id` defined in a single category sheet is assigned automatically. The header is the category name, and the body rows are the category selections. When referencing this category from another sheet, define the Type as `Form.<CategoryName>`.
 
 ![Categories Sheet](./img/CategoriesSheet.png)
