--- a/docs/DataPortals/03.MasterSheet.md
+++ b/docs/DataPortals/03.MasterSheet.md
@@ -1,6 +1,6 @@
 # DataPortal Master Sheet
 
-This is the first sheet that is processed by Composable and acts as a link to all other container sheets that will ultimately be shown to the end user. This is a required sheet in the workbook. This sheet will only have 2 rows, a header, and the row that describes the database.
+This is the first sheet that is processed by Composable and acts as a link to all other container sheets that will ultimately be shown to the end user. This is a required sheet in the workbook and must be named `Master`. The master sheet will only have 2 rows; the header, and a row that describes the database. It is a sepcial case of a [Container Sheet](./04.ContainerSheet.md).
 
 - [Name](06.Setting-Details/Name.md) will serve as the root database name.  
 - ControlType will be [`Link`](./05.Control-Details/Link.md) 
