--- a/docs/DataPortals/10.UpdateDataPortals.md
+++ b/docs/DataPortals/10.UpdateDataPortals.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
 # Updating a Data Portal
 
-To update a DataPortal, make changes to the original excel file, then reupload it in the Manage page of your DataPortal. You can easily add new fields or containers to your data model.
+To update a DataPortal, make changes to the DataPortal's excel file, then reupload it on the Manage page. Adding new fields, containers, or changing control types to your data model only require changing a few fields.
 
 !!! note
     A DataPortal can not detect renaming of a field. If you change a field name, it will delete the old field and add a new one. Changing the DisplayName is the recommended solution.
