--- a/docs/Keys/02.Using-Keys.md
+++ b/docs/Keys/02.Using-Keys.md
@@ -42,14 +42,14 @@ In addition to these specific Key types listed above, Composable also provides K
 
 This is especially useful when developing multiple DataFlows that may require the use of these "global variables" (e.g., a string that stores a path to a shared network folder).
 
-Once you select the Key type, a form appears to enter the relevant information based on the type selected (e.g., username, password, host, port, etc.). The name you enter in the Name field will be used to identify and retrieve the Key across the other Composabel resources (e.g., in the DataFlow Applications and QueryViews). Please be sure to use simply, easy to remember, and unique names.
+Once you select the Key type, a form appears to enter the relevant information based on the type selected (e.g., username, password, host, port, etc.). The name you enter in the Name field will be used to identify and retrieve the Key across the other Composable resources (e.g., DataFlows and QueryViews). Please be sure to use easy to remember and unique names.
 
 ![Composable Key Name](img/09.02.Img_4.png)
 
 !!! note
-    Use simply, easy to remember, and unique names for your Keys, as this will be how your Keys are identified and retrieved across other Composable Resources.
+    Use easy to remember and unique names for your Keys, as this will be how your Keys are identified and retrieved across other Composable Resources.
 
-Be sure to Save your Key (upper right button) once you fill out all the required information.
+Save your Key (upper right button) once you fill out all the required information.
 
 ## Sharing a Key
 
