--- a/docs/DataFlows/02.Composable-Designer.md
+++ b/docs/DataFlows/02.Composable-Designer.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # Composable Designer
 
-The Composable Designer is where users can compose, or author, their DataFlow Applications. The Composable Designer consists of a rich, modern and web-based user interface design tool for flow-based programming. This design tool is where users in Composable can compose, or author, their DataFlow Applications.
+The Composable Designer is where users can compose, or author, their DataFlow Applications. The Composable Designer consists of a rich, modern and web-based user interface design tool for flow-based programming.
 
 To create a new DataFlow, click on DataFlow or select DataFlow > Create New from the sidebar menu.
 
@@ -21,7 +21,7 @@ The Composable Designer user interface is made up of five primary areas: the [ca
 
 ## Designer Canvas
 
-The canvas area is the main working area for the Composable Designer, where modules are placed and connected to form full DataFlow Applications. Once Modules are placed on the canvas, they can be moved around, resized, and connected with other modules. While the execution order of the modules are determined by the underlying graph structure of the DataFlow, it is recommeded to take a left-to-right or top-to-bottom layout for optimal human-readability.
+The canvas area is the main working area for the Composable Designer, where modules are placed and connected to form full DataFlow Applications. Once Modules are placed on the canvas, they can be moved around, resized, and connected with other modules. While the execution order of the modules is determined by the underlying graph structure of the DataFlow, it is recommended to take a left-to-right or top-to-bottom layout for optimal human-readability.
 
 The canvas is dynamic and large enough for even the most complex DataFlows, but if you find that you need more room, consider [encapsulating your DataFlows](./03.KeyBoard-Shortcuts.md).
 
@@ -47,7 +47,7 @@ From left to right:
 - **Cleanup** to automatically arrange modules in the canvas.
 - **Help** that provides common [keyboard shortcuts](./03.KeyBoard-Shortcuts.md)
 - **Save** to save the current DataFlow Application.
-- **Resume**: DataFlow Resume allows you to carry many module output values from one run to the next. The execution engine detects changes to your DataFlow since the previous run and conditionally determine which modules need to be re-executed, all other modules will reuse the results from the previous run.
+- **Resume**: DataFlow Resume allows you to carry many module output values from one run to the next. The execution engine detects changes to your DataFlow since the previous run and conditionally determine which modules need to be re-executed. All other modules will reuse the results from the previous run.
     - Modules whose inputs (connections or values) have been changed since the last run.
     - Modules with errors in the previous run.
     - Modules that have the ‘Force Execution’ option set.
@@ -63,7 +63,7 @@ The Properties Panel, on the right-hand side of the canvas, includes:
 
     - Renaming DataFlows can be done by simply editing the Name and Saving the DataFlow.
 
-- The **Navigation** card for adjusting the current view and zoom level. The currently viewable section of the canvas is highighted in the thumbnail and can be moved around to pan the canvas.
+- The **Navigation** card for adjusting the current view and zoom level. The currently viewable section of the canvas is highlighted in the thumbnail and can be moved around to pan the canvas.
 
 - The **Module Info** card, which provides information on the currently selected module.
 
@@ -75,7 +75,7 @@ The Properties Panel, on the right-hand side of the canvas, includes:
     - **Realtime Outputs**: When enabled, outputs are available in real-time during a run.  See the Output and Progress Panel below.
     - **Receive Trace Events**: When enabled, status progress is available in the trace panel.  See the Output and Progress Panel below.
     - **Error Handling Options**: When clicked, options are available for Continue on Error and Email on Error behavior.
-- The **Undo Stack** card, which shows the latest actions performed in the dataflow, It can be navigated by clicking or using the undo/redo actions to view the DateFlow in a previous state. 
+- The **Undo Stack** card, which shows the latest actions performed in the dataflow, can be navigated by clicking or using the undo/redo actions to view the DateFlow in a previous state. 
 
 The Properties Panel may be collapsed, and expanded, by clicking on the collapse/expand buttons. This is a useful feature when users require a larger working area on the canvas and/or when working on a small laptop screen.
 
